2005-09-20  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am (refresh): Use the make-map.exe in Mono.Unix.Native.
	* map-icalls.h, map.c, map.h: Update to catch new enums AccessModes, Errno,  
	  and MmapProts.  Huge re-ordering because of namespace change in managed
	  code (not relevant to C API), and make-map.exe now outputs types/members
	  in alphabetical order (to avoid major code churn in the future).

2005-07-12  Daniel Drake  <dsd@gentoo.org>

	* sys-xattr.c: Use <attr/attr.h> if <sys/xattr.h> does not exist (e.g. for
	glibc 2.2)
	* Makefile.am: Link to libattr if libc does not provide the xattr
	syscalls.

Thu Jul 7 12:35:20 EDT 2005 Paolo Molaro <lupus@ximian.com>

	*supportw.c, Makefile.am: remove calls and link to libmono/libwapi.

2005-07-01  Daniel Drake  <dsd@gentoo.org>

	* sys-xattr.c: Support FreeBSD's extattr implementation. Slight API rework
	  to provide transparency between Linux and FreeBSD EA's.
	* map-icalls.h: Update as above

2005-06-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* supportw.c: HeapDestroy.
	* Makefile.am: don't build supportw on windows.

2005-06-29  Ben Maurer  <bmaurer@ximian.com>

	* Makefile.am: namespace our library.

2005-06-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* supportw.c:
	* supportw.h:
	* Makefile.am: new library intended to provide often P/Invoked windows
	API functions not present in io-layer.

2005-06-29  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Handle Syslog-related changes (SyslogFacility isn't a 
	  [Flags] enum); make-map.exe changes.

2005-06-28  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c, map.h: Handle Syslog-related changes (SyslogLevel isn't a [Flags]
	  enum; change in order between LOG_USER and LOG_USRE).

2005-06-27  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c, map.h: Add corrected spelling of LOG_USER.

2005-06-13  Miguel de Icaza  <miguel@novell.com>

	*  sys-statvfs.c (copy_statfs): f_flags is the field name on BSD,
	not f_flag. 
